--- a/app/css/globals.css
+++ b/app/css/globals.css
@@ -63,5 +63,27 @@ body::before {
 	border-color: black;
 	clip-path: polygon(100% 0, 0% 100%, 0 100%, 0 0);
 }
-.contactImage {
+.product-style {
+	position: relative;
+}
+.product-style:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-width: 0 30px 30px 0;
+	border-color: black;
+	clip-path: polygon(100% 0, 0% 100%, 0 100%, 0 0);
+}
+.image-style {
+	position: relative;
+}
+.image-style::before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-width: 0 30px 30px 0;
+	border-color: rgb(239 68 68);
+	clip-path: polygon(100% 0, 0% 100%, 0 100%, 0 0);
 }
