--- a/app/css/globals.css
+++ b/app/css/globals.css
@@ -75,6 +75,19 @@ body::before {
 	border-color: black;
 	clip-path: polygon(100% 0, 0% 100%, 0 100%, 0 0);
 }
+
+.product-style-bought {
+	position: absolute;
+}
+.product-style-bought:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	border-width: 0 30px 30px 0;
+	border-color: black;
+	clip-path: polygon(100% 0, 0% 100%, 0 100%, 0 0);
+}
 .image-style {
 	position: relative;
 }
